--- a/ti_lora_inference.ipynb
+++ b/ti_lora_inference.ipynb
@@ -69,7 +69,7 @@
     "### perform train-test split; the training data will be used to perform img2img generation and classifier training\n",
     "\n",
     "df = pd.read_csv('./data_splits/Fitz_subset.csv') # 7-class subset\n",
-    "image_dir='/ssd/janet/fitz_aug_final_version/data/finalfitz17k'\n",
+    "image_dir='./data/finalfitz17k'\n",
     "\n",
     "test_files = [os.path.splitext(os.path.basename(path))[0] for path in glob(f\"/data_split/data_seed={SEED}/seed_4/*/*/*.jpg\")]\n",
     "seed_mask = df.md5hash.isin(test_files)\n",
